feat(bingo): add --skip flags

--- a/packages/site/src/components/TryItOut.astro
+++ b/packages/site/src/components/TryItOut.astro
@@ -4,9 +4,13 @@ import { PackageManagers } from "starlight-package-managers";
 ---
 
 <div class="try-it-out">
-	<h2>Try it out today with:</h2>
+	<h2>
+		Try out <a href="https://github.com/JoshuaKGoldberg/create-typescript-app"
+			>create-typescript-app</a
+		>, built with Bingo:
+	</h2>
 
-	<PackageManagers type="dlx" pkg="bingo" args="typescript-app" />
+	<PackageManagers type="dlx" pkg="create-typescript-app" />
 
 	<p>
 		Frustrated setting up an endless list of tooling configuration files?
@@ -14,7 +18,7 @@ import { PackageManagers } from "starlight-package-managers";
 		Tired of dependencies breaking changes in your repositories?
 		<br />
 		<br />
-		Let Bingo manage it all for you.
+		Let a package built on Bingo manage it all for you.
 		<br />
 		<br />
 		<LinkButton href="/about">Get started</LinkButton>
